k8s/apps/default/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  selector:
    matchLabels:
      app: lidarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      hostname: lidarr
      volumes:
        - name: lidarr-music-bighorse
          persistentVolumeClaim:
            claimName: lidarr-music-bighorse
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: lidarr
          image: ghcr.io/onedr0p/lidarr-develop:1.4.5.3639
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              memory: 1Gi
          ports:
            - containerPort: 8686
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: lidarr-music-bighorse
              mountPath: /data/media/music
            - name: arr-media
              mountPath: /data/usenet/complete/lidarr
              subPath: usenet/complete/lidarr
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
