k8s/apps/default/lidarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: lidarr
spec:
  selector:
    matchLabels:
      app: lidarr
  serviceName: lidarr
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-block
        volumeMode: Filesystem
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      hostname: lidarr
      volumes:
        - name: lidarr-music-bighorse
          persistentVolumeClaim:
            claimName: lidarr-music-bighorse
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        runAsNonRoot: true
      containers:
        - name: lidarr
          image: ghcr.io/onedr0p/lidarr-develop:rolling@sha256:36ef4f94062be2aebde213ab2d1477f37bbb9557d5f893061a6530bb96150186
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              cpu: 100m
              memory: 1Gi
            limits:
              memory: 1Gi
          ports:
            - containerPort: 8686
              name: web
          volumeMounts:
            - name: config
              mountPath: /config
              readOnly: false
            - name: lidarr-music-bighorse
              mountPath: /data/media/music
            - name: arr-media
              mountPath: /data/usenet/complete/lidarr
              subPath: usenet/complete/lidarr
          startupProbe:
            httpGet:
              path: /ping
              port: web
            failureThreshold: 6
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: web
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 5
